--- a/views/index.html
+++ b/views/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
 	<title>MyProject</title>
+	<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+	<link rel="stylesheet" href="/views/css/app.css">
 	<style>
-		.green {
-			background-color: green;
-			min-height: 200px;
-			color: white;
-		}
-		.blue {
-			background-color: blue;
-			min-height: 200px;
-			color: white;
-		}
-		.orange {
-			background-color: orange;
-			min-height: 200px;
-			color: white;
-		}
 	</style>
 </head>
-<body ng-app="MyProject">
+<body ng-app="myApp" layout="column" ng-cloak ng-controller="AppCtrl as vm">
+
+	<md-toolbar layout="row">
+		<div class="md-toolbar-tools">
+			<md-button hide-gt-sm class="md-icon-button" ng-click="vm.toggleSidenav('left')">
+				<md-icon aria-label="Menu" md-svg-icon="/views/img/icon/menu.svg"></md-icon>
+			</md-button>
+			<h1>App</h1>
+		</div>
+	</md-toolbar>
+
+	<div layout="row" flex>
+		<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-4dp" 
+					md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+			<md-button class="md-accent">Menu 1</md-button>
+			<md-button class="md-accent">Menu 2</md-button>
+		</md-sidenav>
+		<div layout="column" flex id="content">
+			<md-content layout="column" flex class="md-padding">
+				Content !
+			</md-content>
+		</div>
+	</div>
+
 	<script src="/bower_components/angular/angular.js"></script>
 	<script src="/bower_components/angular-aria/angular-aria.js"></script>
 	<script src="/bower_components/angular-animate/angular-animate.js"></script>
 	<script src="/bower_components/angular-material/angular-material.js"></script>
 	<script>
-		angular.module('MyProject', ['ngMaterial']);
-		/* Configure Theme */
-		/*
-		angular.module('MyProject', ['ngMaterial'])
-			.config(function($mdThemingProvider) {
-				$mdThemingProvider.theme('default')
-					.primaryPalette('pink')
-					.accentPalette('orange')
-					.warnPalette('red')
-					.backgroundPalette('yellow');
-			});
-		*/
+		var app = angular
+			.module("myApp", ['ngMaterial']);
+
+
+		app.controller('AppCtrl', function($mdSidenav) {
+			var vm = this;
+			vm.toggleSidenav = function(menuId) {
+				console.log(menuId);
+				$mdSidenav(menuId).toggle();
+			};
+		});
+
 	</script>
+
 </body>
 </html>
