--- a/views/css/app.css
+++ b/views/css/app.css
@@ -1,11 +1,5 @@
 
-.md-toolbar-tools h1 {
-	font-size: inherit;
-	font-weight: inherit;
-	margin: inherit;
-}
-
-md-sidenav.md-locked-open {
+.md-sidenav-left {
 	width: 150px !important;
 	min-width: 150px !important;
 	max-width: 150px !important;
