--- a/views/index.html
+++ b/views/index.html
@@ -40,10 +40,11 @@
 				<ul>
 					<li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
 						<span>{{phone.name}}</span>
-						<p>{{phone.desc}}</p>
+						<p>{{phone.snippet}}</p>
 					</li>
 				</ul>
 				<p>Total number of phones : {{phones.length}}</p>
+				<pre>{{phones | filter:query | orderBy:orderProp | json}}</pre>
 			</div>
 		</md-content>
 	</div>
